tests/derive-tests/as_variant/fail/union.err.txt
error: expected `enum`
 --> /tests/derive-tests/as_variant/fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
